<resources>
                                                       <!-- Login Logout -->
    <string name="app_name">ZooRoo</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Repassword</string>
    <string name="btn_sign_login">Log In</string>
    <string name="btn_sign_signup">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_number">Enter 10 digit Number</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_repassword">Enter the repassword</string>
    <string name="err_msg_checkpassword">Password did not match</string>
    <string name="err_msg_lengthpassword">Minimum length is 5</string>
                                                      <!-- Intro Screen Slider -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
                                                   <!-- NaviGation Drawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_getintouch">Get In Touch</string>
    <string name="nav_addpost">Add Post</string>
    <string name="nav_wishlist">Wish List</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_surprises">Surprises</string>
    <string name="nav_about_us">About Us</string>
    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Add Post</item>
        <item>Wish List</item>
        <item>Get In Touch</item>
        <item>Faq</item>
        <item>Surprises</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Legal Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Legal Policy</string>
</resources>
